@@ -1076,6 +1076,7 @@ the text into a text file and save it for later.</strong>',
 'protectedpagewarning'      => '<strong>WARNING:  This page has been locked so that only users with sysop privileges can edit it.</strong>',
 'semiprotectedpagewarning'  => "'''Note:''' This page has been locked so that only registered users can edit it.",
 'cascadeprotectedwarning'   => "'''Warning:''' This page has been locked so that only users with sysop privileges can edit it, because it is included in the following cascade-protected {{PLURAL:$1|page|pages}}:",
+'titleprotectedwarning'     => '<strong>WARNING:  This page has been locked so that only some users can create it.</strong>',
 'templatesused'             => 'Templates used on this page:',
 'templatesusedpreview'      => 'Templates used in this preview:',
 'templatesusedsection'      => 'Templates used in this section:',
